# SD_RTC-Shield

./: .gitignore  .gitmodules  Readme.md
Software/: start-clion-arm-none-eabi.bat
Software/Try01/: .gitignore  README.md  rules.mk  shell-arm-none-eabi.bat
Software/Try01/blinky/: CMakeLists.txt  main.c  toolchain-Release.cmake
Software/Try01/config/: WelcomeShell.txt  config.bat  uncrustify.cfg
Software/Try01/my-project/: Makefile  my-project.c
Software/Try01/my-project/common_lib/: utils.c
Software/Try02CMake/: Readme.md  shell-arm-none-eabi-msys2.bat  start-clion-arm-none-eabi.bat
Software/Try02CMake/CMake/: CompilerWarnings.cmake  Doxygen.cmake  StandardProjectSettings.cmake  setup.cmake  versioning.cmake
Software/Try02CMake/blinky/: .gitignore  CMakeLists.txt  README.md  arm-none-eabi.cmake  local.cmake.example  main.c
Software/Try02CMake/cardReader/: CMakeLists.txt  arm-none-eabi.cmake  main.c
Software/Try02CMake/common-code/: DS1307.c  DS1307.h  clock.c  clock.h
Software/Try02CMake/common-code/fatfs/: STM32F100.h  diskio.h  mmc_stm32f4_spi.c
Software/Try02CMake/config/: WelcomeShell.txt
Software/Try02CMake/my-common-code/: DS1307.c  DS1307.h  clock.c  uartprint.c
Software/Try02CMakeCpp/: Readme.md  shell-arm-none-eabi-msys2.bat  shell-arm-none-eabi.bat
Software/Try02CMakeCpp/CMake/: Arm.cmake  StandardProjectSettings.cmake  pandocology.cmake  ucm.cmake
Software/Try02CMakeCpp/blinky/: .gitignore  README.md  generated.stm32f401ret6.ld
Software/Try02CMakeCpp/blinkyCpp/: CMakeLists.txt  README.md  arm-none-eabi.cmake  generated.stm32f401ret6.ld  local.cmake.example  main.cpp
Software/Try02CMakeCpp/common-code/: DS1307.c
Software/Try02Hal/: .cproject  .gitignore  .mxproject  .project  Try02Hal Run.cfg  Try02Hal.ioc
Software/Try02Hal/Inc/: main.h  stm32f4xx_hal_conf.h
Software/Try02Hal/Src/: main.c  stm32f4xx_hal_msp.c
Software/Try02Hal/config/: WelcomeShell.txt
Software/Try03PlatformIO/: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  README.md  libOpenCM3-libraries.txt  mbed-libs-DS1307.txt  mbed-libs.txt  mbed_app.json  platformio.ini  start-clion-arm-none-eabi.bat
Software/Try03PlatformIO/src/: main.cpp  main.cpp.bak
Software/Try04PlatformIO_USB/: CMakeLists.txt  mbed_app.json  platformio.ini
Software/Try04PlatformIO_USB/config/: WelcomeShell.txt  uncrustify-cpp.cfg
Software/Try04PlatformIO_USB/src/: main.cpp
Software/common-code/: DS1307.h  clock.c  clock.h  debug.h
Software/common-code/fatfs/: diskio.c  ff.h  ffconf.h  mmc_stm32f4_spi.c  mmc_stm32f4_spi.h
doc/: I2C-analyzed.csv  I2C-analyzed.xlsx  I2C-analyzed2.csv  I2C-analyzed2.xlsx  NUCLEO-F401Pins.ods
doc/ConfigurationWithUSB/: ConfigurationWithUSB.ioc
doc/data/: I2C Try02CMake-DS1307C-Bulk Fetch-Correct SCL Timing-89a6ec07d60116cb10116b55d5784cf07837a7ea-1 MHz, 10 M Samples [1].pvs  I2C Try02CMake-DS1307C-Bulk Fetch-Correct SCL Timing-89a6ec07d60116cb10116b55d5784cf07837a7ea-1 MHz, 10 M Samples [1].sr  I2C Try02CMake-DS1307C-Bulk Fetch-a7152ba24d58ec158f8ff5fb746c7f2820557d9a-1 MHz, 10 M Samples [1].pvs  I2C Try02CMake-DS1307C-Bulk Fetch-a7152ba24d58ec158f8ff5fb746c7f2820557d9a-1 MHz, 10 M Samples [1].sr  I2C Try02CMake-DS1307C-Single Fetch-55cb4b28b1808a73b01e6af4cd70aa86d6158e25-1 MHz, 10 M Samples [1].pvs  I2C Try02CMake-DS1307C-Single Fetch-55cb4b28b1808a73b01e6af4cd70aa86d6158e25-1 MHz, 10 M Samples [1].sr  I2C Try02CMake-SDCard-1 MHz, 10 M Samples [1].pvs  I2C Try02CMake-SDCard-1 MHz, 10 M Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-Full Debug-2d52a4726bbc07c7d12aae1a8ce4af7e71bdea5d-8 MHz, 200 M Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-Full Debug-2d52a4726bbc07c7d12aae1a8ce4af7e71bdea5d-8 MHz, 200 M Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-Got Card 0x01 after CMD(Idle)-8f9c05b5e76980714514994901a3ae7726b46019-24 MHz, 500 M Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-Got Card 0x01 after CMD(Idle)-8f9c05b5e76980714514994901a3ae7726b46019-24 MHz, 500 M Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-SD Debug with PA10-823c447a391d6bfc15aa58058f08df20cf0eff82-16 MHz, 100 M Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-SD Debug with PA10-823c447a391d6bfc15aa58058f08df20cf0eff82-16 MHz, 100 M Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-Switchable Slow and Fast SPI-CLK no printf-728ca5212a1e4941fd10ac57885b5155487bda57-24 MHz, 500 M Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-Switchable Slow and Fast SPI-CLK no printf-728ca5212a1e4941fd10ac57885b5155487bda57-24 MHz, 500 M Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-Switchable Slow and Fast SPI-CLK-5556e3848932f1fc336b670a128af8ea4ac3048e-24 MHz, 500 M Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-Switchable Slow and Fast SPI-CLK-5556e3848932f1fc336b670a128af8ea4ac3048e-24 MHz, 500 M Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-Switchable Slow and Fast SPI-send dummy clocks-b4c779a8012f90993a3a397074c76ac8267f726a-24 MHz, 500 M Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-Switchable Slow and Fast SPI-send dummy clocks-b4c779a8012f90993a3a397074c76ac8267f726a-24 MHz, 500 M Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-d8667382e1d00b6f9659b99e4e5aef376a5602ca-24 MHz, 100 G Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-d8667382e1d00b6f9659b99e4e5aef376a5602ca-24 MHz, 100 G Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-d8667382e1d00b6f9659b99e4e5aef376a5602ca-24 MHz, 200 M Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-d8667382e1d00b6f9659b99e4e5aef376a5602ca-24 MHz, 200 M Samples [1].sr  I2C Try02CMake-SDCard-mbed card io-d8667382e1d00b6f9659b99e4e5aef376a5602ca-8 MHz, 50 M Samples [1].pvs  I2C Try02CMake-SDCard-mbed card io-d8667382e1d00b6f9659b99e4e5aef376a5602ca-8 MHz, 50 M Samples [1].sr  I2C mbed example 1 MHz, 10 M Samples [1].pvs  I2C mbed example 1 MHz, 10 M Samples [1].sr  I2C mbed example 24 MHz, 240 M Samples [3].logicdata  hex-SD_Card-mbed.txt  hex-SD_Card-mbed1c.txt  hex-SD_Card-mbed2.txt  hex-SD_Card-mbed2c.txt  nucleo_with_sd_rtc_shield.logicsettings
(+6 files in other folders)
